Reduce CPE lookup and NVD import resource usage